se Agrega la funcionalidad para agregar sonido a las tarjetas, queda pendiente los permisos del storage

--- a/MemoryApp/gradle/libs.versions.toml
+++ b/MemoryApp/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ firebaseFirestoreKtx = "26.0.2"
 firebaseAi = "17.4.0"
 navigationCompose = "2.9.5"
 uiText = "1.9.3"
+firebaseStorageKtx = "22.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -32,6 +33,7 @@ firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-fires
 firebase-ai = { group = "com.google.firebase", name = "firebase-ai", version.ref = "firebaseAi" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-compose-ui-text = { group = "androidx.compose.ui", name = "ui-text", version.ref = "uiText" }
+firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
